--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -42,7 +42,7 @@
         <div class="table_content">
           <div class="table_head">
             <div class="button_bg table_button">
-              <input type="checkbox" value="0" name="cb" class="select_all"/>
+              <input type="checkbox" value="0" name="cb" class="select_all" id="select_all_chk_box"/>
             </div>
             <ul class="table_actions" style="list-style-type: none">
               <li><%= link_to("Add To Group", add_to_group_form_contact_groups_path(@contact), :method => "GET", :remote => true, :class => "table_button", :id => "add_to_group_button") %></li>
