--- a/app/views/contacts/_contacts.html.erb
+++ b/app/views/contacts/_contacts.html.erb
@@ -4,9 +4,9 @@
         <span class="image_load" id="img<%= contact.id %>"><%= image_tag('ajax-cb-loader.gif') %></span>
       </td>
       <td class="table_check">
-        <input class="chk_box" type="checkbox" value="<%= contact.id %>" name="cb[]"></input></td>
-      <td><%= contact.name %></td>
-      <td><%= contact.email %></td>
+        <input class="chk_box" id="contact_chk_box<%= contact.id %>" type="checkbox" value="<%= contact.id %>" name="cb[]"></input></td>
+      <td class="contact_name"><%= contact.name %></td>
+      <td class="contact_email"><%= contact.email %></td>
       <td class="row_actions"><%= link_to 'Edit', edit_contact_path(contact), :class => "table_button black edit", :remote => true %></td>
     </tr>
 <% end %>
