--- a/app/views/users/registrations/_form.html.erb
+++ b/app/views/users/registrations/_form.html.erb
@@ -29,7 +29,7 @@
           <td class="description"><%= f.label :affiliation, "Affiliation:" %></td>
           <td class="entry">
             <span class="affiliation_span"><%= f.select(:affiliation, %w{Student Alumni Fan}, {:include_blank => true}, :class => 'affilation') %></span>
-            <span>of <%= f.select(:college_id, College.all.map { |a| [a.name, a.id] }, {:include_blank => true}, :class => 'college') %></span>
+            <span>of <%= f.select(:college_id, College.find(:all, :order => "name ASC").collect { |a| [a.name, a.id] }, {:include_blank => true}, :class => 'college') %></span>
           </td>
           <td class="star"><%= mark_required(resource, :affiliation) %></td>
         </tr>
