--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
       <div id="stats_container" class="table_middle">
         <%# FIXME widget shows stats only for I-A now %>
         <%# Conference.where(:division => session[:division]).each do |conference| %>
-        <% conferences = Conference.where(:division => 'I-A').order('name asc') %>
+        <% conferences = Conference.where(:division => 'I-A').order('name ASC') %>
 		<% conferences.each do |conference| %>
         <%= render :partial => 'conferences/stats_widget', :locals => {:conference => conference, :limit => 3} %>
         <% end %>
