Fixed access denied message, added active class to submenu items.

--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -13,7 +13,7 @@
           <a href="<%= url_for(conference) %>"><%= conference.name %></a>
           <ul>
             <% conference.colleges.each do |college| %>
-                <li class="college"><%= link_to college.name, college %></li>
+                <li<%= if college == @college then; ' class="active"'.html_safe end %>><%= link_to college.name, college %></li>
             <% end %>
           </ul>
         </li>
