--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,17 +1,16 @@
 <% content_for :above do %>
-    <div class="stat_title">CONFERENCE STATISTICS</div>
-    <div id="stats_widget" class="table new_level clearfix">
-      <div id="stats_container" class="table_middle">
-        <%# FIXME widget shows stats only for I-A now %>
-        <%# Conference.where(:division => session[:division]).each do |conference| %>
-        <% conferences = Conference.where(:division => 'I-A').order('name ASC') %>
-		<% conferences.each do |conference| %>
+  <div class="stat_title">CONFERENCE STATISTICS</div>
+  <div id="stats_widget" class="table new_level clearfix">
+    <div id="stats_container" class="table_middle">
+      <%# FIXME widget shows stats only for I-A now %>
+      <%# Conference.where(:division => session[:division]).each do |conference| %>
+      <% Conference.where(:division => 'I-A').order('name asc').each do |conference| %>
         <%= render :partial => 'conferences/stats_widget', :locals => {:conference => conference, :limit => 3} %>
-        <% end %>
-      </div>
+      <% end %>
     </div>
+  </div>
 <% end %>
 
 <% if @sotw %>
-    <%= render :partial => 'sotw' %>
+  <%= render :partial => 'sotw' %>
 <% end %>
