--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title><%= title %></title>
+  <%= favicon_link_tag %>
+
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag 'rails.validations', 'twipsy', '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js', 'jquery.toastmessage.js', 'jquery.tokeninput.js' %>
 
