Fixed left menu overlay issue, fixed snapshot for news.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= javascript_include_tag 'rails.validations', 'twipsy', '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js', 'jquery.toastmessage.js', 'jquery.tokeninput.js' %>
 
   <%= stylesheet_link_tag 'reset', 'style', 'user', 'contacts', 'token-input-facebook', 'twipsy', 'utility_components', 'facebox', 'jquery.fancybox-1.3.4.css', 'jquery.toastmessage.css' %>
-  <%= javascript_include_tag "facebox", 'stat_slider' %>
+  <%= javascript_include_tag "facebox", 'stat_slider', 'swfobject' %>
   <% if params[:controller] == 'contacts' %>
       <%= javascript_include_tag 'contacts' %>
   <% end %>
