--- a/app/views/posts/_news_preview.html.erb
+++ b/app/views/posts/_news_preview.html.erb
@@ -1,4 +1,5 @@
 <li class="team-item">
+  <h3><%= link_to "News post", post.news_post.url, :class => 'snap_shots' %></h3>
   <div class="summary">
     <%= truncate(post.title, :length => 80) %>
   </div>
