--- a/app/views/shared/_authentications.html.erb
+++ b/app/views/shared/_authentications.html.erb
@@ -1,6 +1,6 @@
 <div id="services_manage" class="services">
   <% if @services.any? %>
-      <p class="info_text">Authentication ervices Settings</p>
+      <p class="info_text">Authentication Services Settings</p>
   <% end %>
   
   <div class="auths">
