--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -12,7 +12,7 @@
         <li class="with_submenu<%= ' active' if @conference == conference %>">
           <a href="<%= url_for(conference) %>"><%= conference.name %></a>
           <ul>
-            <% conference.colleges.each do |college| %>
+            <% conference.colleges.order('name asc').each do |college| %>
                 <li<%= if college == @college then; ' class="active"'.html_safe end %>><%= link_to college.name, college %></li>
             <% end %>
           </ul>
