--- a/app/views/posts/_small_preview.html.erb
+++ b/app/views/posts/_small_preview.html.erb
@@ -12,7 +12,7 @@
   <div class="preview">
     <%= youtube_embed(post.video.url) if post.video %>
     <% if post.photo %>
-        <a class="photo" href="<%= post.photo_url(:large) %>"><img src="<%= post.photo_url(:small) %>" alt=""/></a>
+        <a class="photo" href="<%= post.photo_url(:large) %>"><img src="<%= post.photo_url(:medium) %>" width="158" alt=""/></a>
     <% end %>
   </div>
   <div class="summary">
