--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,10 +67,10 @@
       <%= yield(:above) %>
       <%= render_breadcrumbs %>
       <div class="wrapper clearfix">
-        <div id="conference_column" class="column">
+        <div id="conference_column">
           <%= render 'layouts/left_sidebar' %>
         </div>
-        <div id="yield_column" class="column">
+        <div id="yield_column">
           <%= yield %>
         </div>
       </div>
