--- a/public/stylesheets/utility_components.css
+++ b/public/stylesheets/utility_components.css
@@ -55,6 +55,26 @@
     text-transform: uppercase;
 }
 
+input.dark_button{
+    display: block;
+    padding: 3px 9px 0;
+    color: #fff;
+    font-family: Conv_MyriadPro-BoldCond;
+    font-size: 19px;
+    text-transform: uppercase;
+    display: block;
+    height: 28px;
+    background: url('/images/dark_button_bg.png') repeat-x;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -khtml-border-radius: 5px;
+    border-radius: 5px;
+    border:none;
+    text-align: center;
+    width: auto!important;
+}
+
+
 .dark_button {
     display: block;
     height: 28px;
@@ -181,6 +201,20 @@
 .items_per_page em {
     font-style: normal;
     font-weight: bold;
+}
+
+.search_input{
+     -moz-border-radius: 4px 4px 4px 4px;
+    background: none repeat scroll 0 0 #FBFBFB;
+    border-color: #CDCDCD;
+    border-style: solid;
+    border-width: 1px 1px 1px;
+    color: #7A7B7D;
+    float: left;
+    font-size: 11px;
+    height: 14px;
+    width: 100px;
+    margin-right: 5px;
 }
 
 /* Fancybox close button */
